# ViZDoom

./: CMakeLists.txt
examples/c++/: Basic.cpp  CIG.cpp  CIGBots.cpp  CIGHost.cpp  CMakeLists.txt  CMakeLists.txt.bck  DeltaButtons.cpp  Main.cpp  Seed.cpp  Shaping.cpp  Spectator.cpp  Test.cpp  main  test
examples/c++/agent/: .actionvaluenetwork.cpp.swp  actionvaluenetwork.cpp  actionvaluenetwork.h  datastructures.h  doomagent.cpp  experiencereplaybuffer.h
examples/cuda/: CMakeLists.txt  Main.cpp  main.cpp  test.cpp
examples/cuda/agent/: actionvaluenetwork.cpp  actionvaluenetwork.cu  actionvaluenetwork.cu.bck  actionvaluenetwork.h  datastructures.h  doomagent.cpp  doomagent.h  experiencereplaybuffer.cpp  experiencereplaybuffer.h  networkelements.cpp  networkelements.h  networklayer.cu  networklayer.h
examples/cuda/test/: test-bn.cpp  test-preds.cpp  test-preds.txt  test-single.cpp  test-targets.txt  test.cpp.bck2
